--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="col navElements" >
                     <a href="#">HTML</a>
                     <a href="#">CSS</a>
-                    <a href="/HTML/javaScript.html">JavaScript</a>
+                    <a href="javaScript.html">JavaScript</a>
                 </div>
             </div>
         </div>
