--- a/javaScript.html
+++ b/javaScript.html
@@ -7,7 +7,7 @@
     <title>HelpSheet-JavaScript</title>
 
     <!-- style.css linked here -->
-    <link rel="stylesheet" href="/CSS/JavaScript-style.css">
+    <link rel="stylesheet" href="CSS/JavaScript-style.css">
 
     <!-- Bootstrap CSS linked here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
