--- a/javaScript.html
+++ b/javaScript.html
@@ -24,7 +24,7 @@
                     <p style="color: #f0f0f0;">Remind Again</p>
                 </div>
                 <div class="col navElements">
-                    <a href="/index.html">HTML</a>
+                    <a href="index.html">HTML</a>
                     <a href="#">CSS</a>
                     <a href="#">JavaScript</a>
                 </div>
